# scale-to-zero

./: ALGORITHMS_REPORT.md  COORDINATION_SOLUTIONS.md  Cargo.toml  DESIGN.md  Dockerfile  ETCD_COORDINATION_SOLUTION.md  LIBRARIES_TABLE.tex  README.md  SUMMARY_ETCD_SOLUTION.md  TECHNICAL_IMPLEMENTATION_REPORT.md  controller.rs
docs/: diagrams.md
k8s/: deployment.yaml  etcd-coordination.yaml
scale-to-zero/: Cargo.toml  build.rs
scale-to-zero-common/: Cargo.toml
scale-to-zero-ebpf/: Cargo.toml
scale-to-zero-ebpf/src/: main.rs
scale-to-zero/src/: main.rs  utils.rs
scale-to-zero/src/kubernetes/: controller.rs  etcd_coordinator.rs  hpa_controller.rs  mod.rs  models.rs  scaler.rs
testapp/: Cargo.toml  build.rs
testapp-common/: Cargo.toml
testapp-ebpf/: Cargo.toml
testapp-ebpf/src/: main.rs
testapp/src/: main.rs  utils.rs
testapp/src/kubernetes/: controller.rs  etcd_coordinator.rs  hpa_controller.rs  mod.rs  models.rs  scaler.rs
tests/basic-setup/: test-pods.yaml
tests/multiple-services/: nginx-service.yaml
