[package]
name = "scale-to-zero-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
scale-to-zero-common = { path = "../scale-to-zero-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
network-types = "0.0.8"

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "scale-to-zero"
path = "src/main.rs"
