[package]
name = "testapp"
version = "0.1.0"
edition.workspace = true

license.workspace = true

[dependencies]
testapp-common = { path = "../testapp-common", features = ["user"] }
network-interface = "1.1.1"
bytes = "1"
anyhow = { workspace = true, default-features = true }
aya = { workspace = true }
aya-log = { workspace = true }
env_logger = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
] }
clap = { workspace = true, features = ["derive"] }
kube = { version = "0.87.2", features = ["runtime", "derive", "unstable-runtime"] }
k8s-openapi = { version = "0.20.0", features = ["latest"] }
once_cell = "1.19.0"
futures = "0.3.17"
chrono = { version = "0.4.41", features = ["serde"] }
# Etcd coordination dependencies
etcd-rs = "1.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[build-dependencies]
anyhow = { workspace = true }
aya-build = { workspace = true }
# TODO(https://github.com/rust-lang/cargo/issues/12375): this should be an artifact dependency, but
# it's not possible to tell cargo to use `-Z build-std` to build it. We cargo-in-cargo in the build
# script to build this, but we want to teach cargo about the dependecy so that cache invalidation
# works properly.
#
# Note also that https://github.com/rust-lang/cargo/issues/10593 occurs when `target = ...` is added
# to an artifact dependency; it seems possible to work around that by setting `resolver = "1"` in
# Cargo.toml in the workspace root.
#
# Finally note that *any* usage of `artifact = ...` in *any* Cargo.toml in the workspace breaks
# workflows with stable cargo; stable cargo outright refuses to load manifests that use unstable
# features.
testapp-ebpf = { path = "../testapp-ebpf" }

[[bin]]
name = "testapp"
path = "src/main.rs"
